[project]
name = "py"
version = "0.1.0"
description = ""
authors = [{ name = "DBCodes" }]
requires-python = ">=3.11,<4"
dependencies = [
    "redis>=5.0.8,<6",
    "Faker>=29.0.0,<30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]