[project]
name = "py"
version = "0.1.0"
description = ""
authors = [{ name = "DBCodes" }]
requires-python = ">=3.11,<4"
dependencies = [
    "redis>=5.0.8,<6",
    "Faker>=29.0.0,<30",
    "celery[redis]>=5.6.0",
    "bullmq>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
